--- a/TR.ATSPI.CSharpTemplate/ProjectTemplate.csproj
+++ b/TR.ATSPI.CSharpTemplate/ProjectTemplate.csproj
@@ -1,60 +1,65 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProductVersion>8.0.30703</ProductVersion>
-		<SchemaVersion>2.0</SchemaVersion>
-		<ProjectGuid>$guid1$</ProjectGuid>
-		<OutputType>Library</OutputType>
-		<AppDesignerFolder>Properties</AppDesignerFolder>
-		<RootNamespace>$safeprojectname$</RootNamespace>
-		<AssemblyName>$safeprojectname$</AssemblyName>
-		<TargetFrameworkVersion>v$targetframeworkversion$</TargetFrameworkVersion>
-		<FileAlignment>512</FileAlignment>
+		<TargetFramework>net$targetframeworkversion$</TargetFramework>
+		<LangVersion>9.0</LangVersion>
+		<Nullable>enable</Nullable>
 	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
+	<PropertyGroup Label="8337224c9ad9e356:PreProc">
+		<DebugType Condition="'$(DebugType)'!='full' And '$(DebugType)'!='pdbonly'" Label="8337224c9ad9e356:PreProc">pdbonly</DebugType>
 	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<DebugType>pdbonly</DebugType>
- 		<Optimize>true</Optimize>
-		<OutputPath>bin\Release\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
+	<PropertyGroup>
+		<DllExportIdent>0D4DAE2F-BA65-4222-AEAA-CC8A0A5FFAC6</DllExportIdent>
+		<DllExportMetaLibName>DllExport.dll</DllExportMetaLibName>
+		<DllExportNamespace>$safeprojectname$</DllExportNamespace>
+		<DllExportDDNSCecil>true</DllExportDDNSCecil>
+		<DllExportSkipOnAnyCpu>false</DllExportSkipOnAnyCpu>
+		<DllExportPlatform>Auto</DllExportPlatform>
+		<DllExportOrdinalsBase>1</DllExportOrdinalsBase>
+		<DllExportGenExpLib>false</DllExportGenExpLib>
+		<DllExportOurILAsm>false</DllExportOurILAsm>
+		<DllExportSysObjRebase>false</DllExportSysObjRebase>
+		<DllExportLeaveIntermediateFiles>true</DllExportLeaveIntermediateFiles>
+		<DllExportTimeout>30000</DllExportTimeout>
+		<DllExportPeCheck>2</DllExportPeCheck>
+		<DllExportPatches>0</DllExportPatches>
+		<DllExportPreProcType>25</DllExportPreProcType>
+		<DllExportILMerge />
+		<DllExportPostProcType>0</DllExportPostProcType>
 	</PropertyGroup>
 	<ItemGroup>
-		<Reference Include="System"/>
-		$if$ ($targetframeworkversion$ >= 3.5)
-		<Reference Include="System.Core"/>
-		<Reference Include="System.Xml.Linq"/>
-		<Reference Include="System.Data.DataSetExtensions"/>
-		$endif$
-		$if$ ($targetframeworkversion$ >= 4.0)
-		<Reference Include="Microsoft.CSharp"/>
- 		$endif$
-		<Reference Include="System.Data"/>
-		<Reference Include="System.Xml"/>
+		<PackageReference Include="DllExport" Version="1.7.4" />
+		<PackageReference Include="ilmerge">
+			<Version>3.0.29</Version>
+		</PackageReference>
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="3.11.0" />
 	</ItemGroup>
-	<ItemGroup>
-		<Compile Include="Class1.cs" />
-
-		<Compile Include="Properties\AssemblyInfo.cs" />
-	</ItemGroup>
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-
- </Project>
+	<Target Name="DllExportPreProc" BeforeTargets="DllExportMod" Label="8337224c9ad9e356:PreProc" Condition="'$(Platform)' != 'AnyCPU'">
+		<Copy SourceFiles="$(DllExportMetaLibFullPath)" DestinationFolder="$(TargetDir)" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" />
+		<Exec Command="$(ILMergeConsolePath)  $(TargetFileName) /out:$(TargetFileName).ilm0.dll" WorkingDirectory="$(TargetDir)" ContinueOnError="true" />
+		<Move SourceFiles="$(TargetDir)$(TargetFileName).ilm0.dll" DestinationFiles="$(TargetDir)$(TargetFileName)" OverwriteReadOnlyFiles="true" ContinueOnError="true" />
+		<Delete Files="$(TargetDir)$(DllExportMetaLibName)" ContinueOnError="true" />
+	</Target>
+	<Target Name="DllExportPreProcAfter" AfterTargets="DllExportMod" Label="8337224c9ad9e356:PreProc">
+		<Delete Files="$(TargetDir)$(TargetFileName).ilm0.pdb" ContinueOnError="true" />
+	</Target>
+	<ImportGroup Label=".NET DllExport">
+		<Import Project="$(SolutionDir)packages\DllExport.1.7.4\tools\net.r_eg.DllExport.targets" Condition="Exists($([MSBuild]::Escape('$(SolutionDir)packages\DllExport.1.7.4\tools\net.r_eg.DllExport.targets')))" Label="8337224c9ad9e356" />
+	</ImportGroup>
+	<Target Name="DllExportRestorePkg" BeforeTargets="PrepareForBuild">
+		<Error Condition="!Exists('$(SolutionDir)DllExport.bat')" Text="DllExport.bat is not found. Path: '$(SolutionDir)' - https://github.com/3F/DllExport" />
+		<Exec Condition="('$(DllExportModImported)' != 'true' Or !Exists('$(SolutionDir)packages\DllExport.1.7.4\tools\net.r_eg.DllExport.targets')) And Exists('$(SolutionDir)DllExport.bat')" Command=".\DllExport.bat  -action Restore" WorkingDirectory="$(SolutionDir)" />
+		<MSBuild Condition="'$(DllExportModImported)' != 'true'" Projects="$(SolutionDir)packages\DllExport.1.7.4\tools\net.r_eg.DllExport.targets" Targets="DllExportMetaXBaseTarget" Properties="TargetFramework=$(TargetFramework)">
+			<Output TaskParameter="TargetOutputs" PropertyName="DllExportMetaXBase" />
+		</MSBuild>
+		<ItemGroup>
+			<Reference Include="DllExport, PublicKeyToken=8337224c9ad9e356">
+				<HintPath>$(SolutionDir)packages\DllExport.1.7.4\gcache\$(DllExportMetaXBase)\$(DllExportNamespace)\$(DllExportMetaLibName)</HintPath>
+				<Private>False</Private>
+				<SpecificVersion>False</SpecificVersion>
+			</Reference>
+		</ItemGroup>
+	</Target>
+	<Target Name="DllExportRPkgDynamicImport" BeforeTargets="PostBuildEvent" DependsOnTargets="GetFrameworkPaths" Condition="'$(DllExportModImported)' != 'true' And '$(DllExportRPkgDyn)' != 'false'">
+		<MSBuild BuildInParallel="true" UseResultsCache="true" Projects="$(MSBuildProjectFullPath)" Properties="DllExportRPkgDyn=true" Targets="Build" />
+	</Target>
+</Project>
